# gpu-audio

./: Cargo.toml  build.rs
arbitrary_fixed/: Cargo.toml
arbitrary_fixed/src/: assign.rs  basic_ops.rs  constants.rs  conversion.rs  lib.rs  math.rs  pi.rs  shift.rs
src/: arbitraryfixed.glsl  cs.rs  main.rs  shader.glsl
src/arbitrary_fixed_glsl/: arbitraryfixed.glsl  basic_ops.glsl  convert.glsl  math.glsl  util.glsl
src/arbitrary_fixed_glsl/inc/: basic_ops.h  convert.h  math.h  util.h
