[package]
name = "gpu-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
jack = "0.11.4"
resize-slice = "0.1.3"
arbitrary-fixed-glsl = { git = "https://github.com/minerscale/arbitrary-fixed-glsl.git" }

[build-dependencies]
arbitrary-fixed-glsl = { git = "https://github.com/minerscale/arbitrary-fixed-glsl.git" }
arbitrary-fixed = {git = "https://github.com/minerscale/arbitrary-fixed-rs.git"}
